Saved local changes

--- a/CS446Project/app/src/main/AndroidManifest.xml
+++ b/CS446Project/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MusicPlayer"></activity>
+        <activity android:name=".HostMusicPlayer"></activity>
+        <activity android:name=".ParticipantMusicPlayer"></activity>
     </application>
 
 </manifest>
