--- a/CS446Project/app/src/main/AndroidManifest.xml
+++ b/CS446Project/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name=".HostMusicPlayerActivity"></activity>
         <activity android:name=".ParticipantMusicPlayerActivity"></activity>
+        <activity android:name=".ChooseSessionActivity"></activity>
     </application>
 
 </manifest>
