--- a/CS446Project/app/src/main/AndroidManifest.xml
+++ b/CS446Project/app/src/main/AndroidManifest.xml
@@ -53,7 +53,10 @@
         <service
             android:name=".MainService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".EditPlaylistActivity" />
+        <activity android:name=".AddSongsActivity"></activity>
     </application>
 
 </manifest>
